# uni-file-storage

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DOC-TODO.md  LICENSE-MIT.txt  LICENSE.txt  Makefile  README.md  TODO.md  default-config.toml  documentation.fodt  statistiche.sh
config/: default.toml  dev.toml  test1.toml  test2.toml  test3.toml
include/: api.h  serverapi.h  serverapi_actions.h  serverapi_utilities.h  serverapi_utils.h  utilities.h  utils.h
script/: stats.sh
src/: serverapi.c  utilities.c  utils.c
src/client/: cli.c  cli.h  err.h  help.c  help.h  main.c  run_action.c  run_action.h
src/server/: config.c  config.h  deserializer.c  deserializer.h  fifo_cache.c  fifo_cache.h  global_config.c  global_state.c  global_state.h  htable.c  htable.h  main.c  receiver.c  receiver.h  report.c  report.h  server_utilities.h  shutdown.c  shutdown.h  ts_counter.c  ts_counter.h  worker.c  worker.h  workload_queue.c  workload_queue.h
test/: test1-config.toml  test1.sh  test2.sh  test3.sh
test/data/: .gitignore
